--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,27 @@
 .list-group-item{
     padding: 20px;
 }
-
-
+ 
+ 
 .graphdetails{
     padding:20px
 }
-
+ 
 .graph{
     padding:20px;
     width: 70%;
 }
+.selected {
+    border: 2px solid blue;
+  }
+  
+  .empty-box {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px ridge gray;
+    color: gray;
+    font-size: 1.2em;
+  }
