Added Default graphs for every icon with dummy data

--- a/src/app/defaultbar/defaultbar.component.html
+++ b/src/app/defaultbar/defaultbar.component.html
@@ -1,8 +1,8 @@
-<div class="graph">
+<div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
     [xaxis]="xaxis"
     [title]="titleSubtitle">
     </apx-chart>
-  </div>
+</div>
