--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="graph">
-  <div *ngIf="!shouldDisplayChart()" class="empty-box">
+  <div *ngIf="selectedtype == ''" class="empty-box">
     Select chart type and enter data to display the chart.
   </div>
+  <app-defaultbar *ngIf="selectedtype == 'bar'"></app-defaultbar>
+  <app-defaultline *ngIf="selectedtype == 'line'"></app-defaultline>
+  <app-defaultpie *ngIf="selectedtype == 'pie'"></app-defaultpie>
   <div *ngIf="shouldDisplayChart()">
     <apx-chart
       [series]="chartSeries"
@@ -35,13 +38,13 @@
       &nbsp;
       <div class="row">
         <div class="col-xs-6">
-          <label for="x-axis">X-axis</label>
+          <label for="x-axis">{{selectedtype == 'pie'?'Segment By':'X-axis'}}</label>
           <select id="x-axis" class="form-control" [(ngModel)]="SelectXaxis" name="x-axis">
               <option *ngFor="let i of Xaxis">{{ i }}</option>
           </select>        
         </div>
         <div class="col-xs-6">
-          <label for="y-axis">Y-axis</label>
+          <label for="y-axis">{{selectedtype == 'pie'?'Measure':'Y-axis'}}</label>
           <select id="y-axis" class="form-control" [(ngModel)]="SelectYaxis" name="y-axis">
             <option *ngFor="let i of Yaxis">{{ i }}</option>
           </select>            
