--- a/src/app/defaultpie/defaultpie.component.html
+++ b/src/app/defaultpie/defaultpie.component.html
@@ -1,8 +1,10 @@
-<div class="graph">
+<div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
     [legend]="legend"
+    [labels]="chartLabels"
+    [dataLabels]="dataLabels"
     [title]="titleSubtitle">
     </apx-chart>
 </div>
