Added pie chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       [series]="chartSeries"
       [chart]="chartOptions"
       [xaxis]="xaxis"
+      [legend]="legend"
+      [labels]="chartLabels"
+      [dataLabels]="dataLabels"
       [title]="titleSubtitle">
     </apx-chart>
   </div>
