--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,27 +1,81 @@
-.list-group-item{
+.list-group-item {
     padding: 20px;
 }
- 
- 
-.graphdetails{
-    padding:20px
+
+.graphdetails {
+    padding: 20px;
 }
- 
-.graph{
-    padding:20px;
+
+.graph {
+    padding: 20px;
     width: 70%;
 }
+.graph-container{
+    position: absolute;
+    top: 35px;
+    left: 35px;
+    padding: 20px;
+    background-color: white;
+}
+
+.graph-content {
+    position: relative;
+}
+
 .selected {
     border: 2px solid blue;
-  }
-  
-  .empty-box {
-    width: 100%;
-    height: 350px;
+}
+
+.empty-box {
+    position: relative;
+    z-index: 1; /* Lower z-index to keep it below the graph */
+    padding: 0 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px ridge gray;
-    color: gray;
-    font-size: 1.2em;
-  }
+    /* Set width and height to match the graph area */
+    width: 100%;
+    height: 100%;
+}
+
+
+.header {
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    text-align: left;
+    color: #19232B;
+}
+
+.title {
+    font-family: Poppins;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: left;
+    color: #19232B;
+}
+
+.field-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.form-control {
+    height: 44px;
+    border-radius: 16px;
+}
+
+.image-container {
+    display: flex;
+    gap: 16px;
+}
+
+.image-section {
+    width: 65px;
+    height: 65px;
+    cursor: pointer;
+    border: 0;
+}
