--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,13 +32,17 @@
           <label for="title" class="title">Widget title</label>
           <input id="title" placeholder="Title name 1" name="title" class="form-control" [(ngModel)]="text">      
         </div>  
-          <div>
-          <label for="title" class="title">Widget Subtitle (optional)</label>
-          <input id="title" placeholder="Subtitle name 1" name="title" class="form-control" [(ngModel)]="text">      
-        </div>  
+          <!-- <div>
+          <label for="Subtitle" class="title">Widget Subtitle (optional)</label>
+          <input id="Subtitle" placeholder="Subtitle name 1" name="Subtitle" class="form-control" [(ngModel)]="Subtext">      
+        </div>   -->
           <!-- <div>
           <label for="title" class="title">Size</label>
-          <input id="title" name="title" class="form-control" [(ngModel)]="text">      
+          <select class="form-control" id="size" name="size">
+            <option value="large">Large</option>
+            <option value="small">Small</option>
+            <option value="small">Medium</option>
+          </select>
         </div>  -->
       </div>
         </div>
