--- a/src/app/defaultbar/defaultbar.component.html
+++ b/src/app/defaultbar/defaultbar.component.html
@@ -1,8 +1,9 @@
-<div>
+<!-- <div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
     [xaxis]="xaxis"
     [title]="titleSubtitle">
     </apx-chart>
-</div>
+</div> -->
+<div id="chart-container" style="width: 100%; height: 400px;"></div>
