--- a/src/app/defaulthorbar/defaulthorbar.component.html
+++ b/src/app/defaulthorbar/defaulthorbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
@@ -6,4 +6,5 @@
     [plotOptions]="plotoptions"
     [title]="titleSubtitle">
     </apx-chart>
-</div>
+</div> -->
+<div id="chart-container" style="width: 100%; height: 400px;"></div>
