--- a/src/app/defaultpie/defaultpie.component.html
+++ b/src/app/defaultpie/defaultpie.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
@@ -7,4 +7,5 @@
     [dataLabels]="dataLabels"
     [title]="titleSubtitle">
     </apx-chart>
-</div>
+</div> -->
+<div id="main" style="width: 600px; height: 400px;"></div>
