--- a/src/app/defaultdonut/defaultdonut.component.html
+++ b/src/app/defaultdonut/defaultdonut.component.html
@@ -1,4 +1,4 @@
-<!-- <div>
+<div>
     <apx-chart
     [series]="chartSeries"
     [chart]="chartOptions"
@@ -7,6 +7,6 @@
     [dataLabels]="dataLabels"
     [title]="titleSubtitle">
     </apx-chart>
-</div> -->
+</div>
 
 <!-- <div echarts [options]="chartOption" class="demo-chart"></div> -->
