--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
           <label for="title" class="title">Widget title</label>
           <input id="title" placeholder="Title name 1" name="title" class="form-control" [(ngModel)]="text">      
         </div>  
-          <!-- <div>
+          <div>
           <label for="Subtitle" class="title">Widget Subtitle (optional)</label>
           <input id="Subtitle" placeholder="Subtitle name 1" name="Subtitle" class="form-control" [(ngModel)]="Subtext">      
         </div> 
@@ -34,7 +34,7 @@
             <option value="small">Small</option>
             <option value="small">Medium</option>
           </select>
-        </div>  -->
+        </div> 
       </div>
         </div>
         <div class="field-1 col-xs-6">
