--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,13 +10,14 @@
     padding: 20px;
     width: 70%;
 }
+
 .graph-container{
     position: absolute;
     top: 35px;
     left: 35px;
     padding: 20px;
     background-color: white;
-    width: 65%;
+    /* width: 65%; */
 }
 
 .graph-content {
