--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,11 +43,11 @@
         </div> 
           <div>
           <label for="title" class="title">Size</label>
-          <select class="form-control" id="size" name="size">
-             <option value="" disabled selected>Select</option>
+          <select class="form-control" id="size" name="size" [(ngModel)]="Size">
+            <option value="" disabled selected>Select</option>
             <option value="large">Large</option>
             <option value="small">Small</option>
-            <option value="small">Medium</option>
+            <option value="medium">Medium</option>
           </select>
         </div> 
       </div>
